# rs-reminder-bot

./: Cargo.toml  README.md  default.nix  deploy.sh  systemd-service.nix  test.sh
src/: db.rs  main.rs  new_main.rs  send-reminders.rs
